--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ targetCompatibility = '1.7'
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 // The main class of the application
-mainClassName = 'uk.co.bluetel.Application'
+mainClassName = 'uk.co.bluetel.ApplicationService'
 
 // Add Gradle OneJar Plugin, see https://github.com/rholder/gradle-one-jar
 buildscript {
@@ -25,7 +25,7 @@ buildscript {
 
 // Set our project variables
 project.ext {
-    dropwizardVersion = '0.6.2'
+    dropwizardVersion = '0.9.2'
 }
 
 repositories {
@@ -34,10 +34,10 @@ repositories {
 
 dependencies {
     compile (
-       'com.yammer.dropwizard:dropwizard-core:' + dropwizardVersion,
-       'com.yammer.dropwizard:dropwizard-hibernate:' + dropwizardVersion,
-       'com.yammer.dropwizard:dropwizard-migrations:' + dropwizardVersion,
-       'com.yammer.dropwizard:dropwizard-auth:' + dropwizardVersion,
+       'io.dropwizard:dropwizard-core:' + dropwizardVersion,
+       'io.dropwizard:dropwizard-hibernate:' + dropwizardVersion,
+       'io.dropwizard:dropwizard-migrations:' + dropwizardVersion,
+       'io.dropwizard:dropwizard-auth:' + dropwizardVersion,
        'com.h2database:h2:1.3.168'
     )
 }
