--- a/build.gradle
+++ b/build.gradle
@@ -34,12 +34,25 @@ repositories {
 
 dependencies {
     compile (
-       'io.dropwizard:dropwizard-core:' + dropwizardVersion,
-       'io.dropwizard:dropwizard-hibernate:' + dropwizardVersion,
-       'io.dropwizard:dropwizard-migrations:' + dropwizardVersion,
-       'io.dropwizard:dropwizard-auth:' + dropwizardVersion,
-       'com.h2database:h2:1.3.168'
+            'io.dropwizard:dropwizard-core:' + dropwizardVersion,
+            'io.dropwizard:dropwizard-hibernate:' + dropwizardVersion,
+            'io.dropwizard:dropwizard-migrations:' + dropwizardVersion,
+            'io.dropwizard:dropwizard-auth:' + dropwizardVersion,
+            'io.dropwizard:dropwizard-client:' + dropwizardVersion,
+            'junit:junit:4.12',
+            'io.dropwizard:dropwizard-testing:' + dropwizardVersion,
+            'org.assertj:assertj-core:2.3.0',
+            'com.h2database:h2:1.3.168'
     )
+    testCompile 'junit:junit:4.12'
+}
+
+sourceSets {
+    test {
+        java {
+            srcDirs = ["src/"]
+        }
+    }
 }
 
 // Configure the oneJar task
