--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,7 @@
 language: java
+jdk:
+    - openjdk7
+    - oraclejdk7
+script: ./gradlew -q jar fatJar distZip
+after_script:
+    - test -f ./build/libs/dropwizard-gradle.jar
