--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,4 @@ language: java
 jdk:
     - openjdk7
     - oraclejdk7
-script: ./gradlew -q jar fatJar distZip
-after_script:
-    - test -f ./build/libs/dropwizard-gradle.jar
+script: ./gradlew test
